--- a/day5a/day5a.Rmd
+++ b/day5a/day5a.Rmd
@@ -92,7 +92,7 @@ Assume observed phenotypes are derived from  underlying latent variables
 
 ---
 # Study the genetics of each latent variable
-![](BCFA.pdf)
+<img src="BCFA.jpg" height="530px" width="700px"/>
 
 ---
 # Multivariate analysis
@@ -111,7 +111,7 @@ Assume observed phenotypes are derived from  underlying latent variables
 
 ---
 # Constraint-based learning
-![](Fig3.pdf)
+<img src="Fig3.jpg" height="530px" width="700px"/>
 
 
 
@@ -126,32 +126,35 @@ Assume observed phenotypes are derived from  underlying latent variables
 
 ---
 # Genetic correlations among latent variable
-![](Cor_plot_for_presentation.pdf)
+<img src="Cor_plot_for_presentation.png" height="530px" width="700px"/>
 
 ---
 # Hill Climbing algorithm
-![](BN_HC.pdf)
+<img src="BN_HC.png" height="530px" width="700px"/>
+
 
 
 
 ---
 # Tabu algorithm
-![](BN_TABU.pdf)
+<img src="BN_TABU.png" height="530px" width="700px"/>
+
 
 
 ---
 # Max-Min Hill Climbing algorithm
-![](BN_MMHC.pdf)
+<img src="BN_MMHC.png" height="530px" width="700px"/>
+
 
 
 ---
 # General 2-Phase Restricted Maximization algorithm
-<img src="BN_RSMAX2.pdf" height="460px" width="650px"/>
+<img src="BN_RSMAX2.png" height="460px" width="650px"/>
 
 
 ---
 # Consensus Bayesian network
-![](BN_consensus.pdf)
+<img src="BN_consensus.png" height="460px" width="650px"/>
 
 ---
 # Paper - 10.1534/g3.119.400154
